--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -25,3 +25,4 @@ services:
 	- App\Model\UserManager
 	router: App\RouterFactory::createRouter
 	projects: App\Model\Projects
+	users: App\Model\Users
