--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=
+copy.src.target=C:\\xampp\\htdocs\\swi
 index.file=
 run.as=LOCAL
-url=http://localhost/swi/sandbox/www/
+url=http://localhost/swi/
